--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div id="container">
     <header>
       <!-- 이름을 가장 위쪽에 -->
-      <h1>funnycom</h1>
-      <h2>Frontend Developer</h2>
+      <h1>란</h1>
+      <h2>개발자 Developer</h2>
     </header>
     <!-- 내용 -->
     <main>
@@ -26,7 +26,7 @@
         <!-- 자기 소개 -->
         <section>
           <!-- 소개 내용은 <p>와 </p> 사이의 부분을 수정하세요 -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident repellendus debitis ipsam tempore quia ad. Ducimus sint vel porro eos debitis veniam quis, repellat odio neque, cum voluptate, natus doloremque!</p>
+          <p>개발자를 꿈꾸며 깃&깃허브, 프론트엔드, 백엔드를 열심히 공부하고 있는 대학생입니다!</p>
 
           <!-- sns 링크 부분 -->
           <!-- href="" 부분의 링크와 내용을 수정하세요 -->
@@ -52,13 +52,13 @@
           <h2>경력(work)</h2>
           <!-- 경력 내용 수정 -->
             <dl>
-              <dt>회사 A : 2018 ~ 2020</dt>
-              <dd>회사에서 맡았던 업무</dd>
-              <dd>기타 사항</dd>
+              <dt>스타트업 : 2025 ~ 2028</dt>
+              <dd>회사에서 맡았던 업무: 백엔드</dd>
+              <dd>기타 사항: 프론트엔드 업무 보조</dd>
             </dl>
             <dl>
-              <dt>회사 B : 2020 ~ 2022</dt>
-              <dd>회사에서 맡았던 업무</dd>              
+              <dt>네이버 : 2029 ~ 2032</dt>
+              <dd>회사에서 맡았던 업무: 백엔드</dd>              
             </dl>  
         </section>
         <section>
@@ -66,14 +66,17 @@
           <!-- 자신있는 기술 수정 -->
           <p>HTML/CSS</p>
           <p>Javascritpt</p>
-          <p>React</p>
+          <p>Java</p>
           <p>Github</p>
+          <p>python</p>
+          <p>C++</p>
+          <p>Metlab</p>
         </section>
         <section>
           <h2>학력(education)</h2>
           <!-- 학력 수정 -->
-          <p>2018.02 - XX 대학교 졸업(전공: 컴퓨터공학)</p>
-          <p>2012.02 - XX 고등학교 졸업</p>
+          <p>2025.02 - 이화여자대학교 졸업(전공: 컴퓨터공학)</p>
+          <p>2021.02 - 고등학교 졸업</p>
           <p> ... </p>
         </section>
       </artile>
